--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -13,7 +13,10 @@
     <link rel = "stylesheet" type = "text/css" href = "../main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500" rel="stylesheet">
 
-    <!--- Not relevant, but who hurt this poor guy: https://www.youtube.com/watch?v=Co91PGhfZ-o --->
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>Jackson Hammond</title>
 
   </head>
 
@@ -239,6 +242,19 @@
       </div>
 
     </div>
+
+    <footer>
+      <div class="container">
+        <h5>Feel free to reach out if you want to connect or jusy say hi!</h5>
+        <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
+        <div class="social-links">
+          <a href="https://github.com/jbhammon" class="fa fa-github"></a>
+          <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
+        </div>
+        <small class="footer-copyright">Tied together with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
+      </div>
+    </footer>
 
   </body>
 </html>
